--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-currency-format": "^1.1.0",
     "react-dom": "^17.0.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.0",
     "uuidv4": "^6.2.13",
