--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.6.7",
     "react": "^17.0.2",
+    "react-3d-viewer": "^1.0.12",
     "react-currency-format": "^1.1.0",
     "react-dom": "^17.0.2",
+    "react-obj-viewer": "^0.1.3",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.0",
